[workspace]
members = ["crates/lucky", "crates/config"]
default_members = ["crates/lucky"]
resolver = "2"

[workspace.dependencies]
config = { path = "crates/config" }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
xkbcommon = { version = "0.7.0", features = ["x11"] }
xcb = { version = "1.3.0", features = ["xkb", "x11", "xlib_xcb", "as-raw-xcb-connection"] }
