[package]
name = "lucky"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

xcb = { version = "1.3.0", features = ["xkb", "x11", "xlib_xcb", "as-raw-xcb-connection"] }
xkbcommon = { version = "0.7.0", features = ["x11"] }
