[package]
name = "lucky"
version = "0.1.0"
edition = "2021"

[dependencies]
config.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
xkbcommon.workspace = true
xcb.workspace = true

[dev-dependencies]
rand = "0.8.5"
